[package]
name = "stox"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = "0.23"
rustls-native-certs = "0.6"
webpki-roots = "0.26"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"